Added Date Picker

--- a/DaysUntoWeb/DaysUntoWeb.csproj
+++ b/DaysUntoWeb/DaysUntoWeb.csproj
@@ -193,6 +193,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\datepicker.css" />
     <Content Include="Content\font\zocial-regular-webfont.svg" />
     <Content Include="Content\zocial.css" />
     <Content Include="Migrations\Seed_Data\CanadaHolidays.ics" />
@@ -313,6 +314,7 @@
     <Content Include="Scripts\bootstrap-button.js" />
     <Content Include="Scripts\bootstrap-carousel.js" />
     <Content Include="Scripts\bootstrap-collapse.js" />
+    <Content Include="Scripts\bootstrap-datepicker.js" />
     <Content Include="Scripts\bootstrap-dropdown.js" />
     <Content Include="Scripts\bootstrap-modal.js" />
     <Content Include="Scripts\bootstrap-popover.js" />
