--- a/DaysUntoWeb/Web.Release.config
+++ b/DaysUntoWeb/Web.Release.config
@@ -6,14 +6,14 @@
   <!--
     In the example below, the "SetAttributes" transform will change the value of 
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
-    finds an atrribute "name" that has a value of "MyDB".
+    finds an atrribute "name" that has a value of "MyDB". -->
     
     <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
+      <add name="DefaultConnection" 
+        connectionString="Data Source=localhost;Initial Catalog=daysunto;User Id=atombase;Password=daysunto12345$$;" 
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
-  -->
+ 
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
