--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,8 @@ local.properties
 *.vspscc
 .builds
 *.dotCover
+Web.Release.config
+*.pubxml
 
 ## TODO: If you have NuGet Package Restore enabled, uncomment this
 #packages/
