Removing uneeded files

--- a/DaysUntoWeb/Web.config
+++ b/DaysUntoWeb/Web.config
@@ -23,6 +23,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="FacebookAppId" value="281606021969932" />
+    <add key="FacebookAppSecret" value="d9316afc5034b12cf04ac89800824369" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
