--- a/DaysUntoWeb/DaysUntoWeb.csproj
+++ b/DaysUntoWeb/DaysUntoWeb.csproj
@@ -196,24 +196,16 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\datepicker.css" />
-    <Content Include="Content\font\zocial-regular-webfont.svg" />
+    <Content Include="Content\zocial-regular-webfont.svg" />
     <Content Include="Content\zocial.css" />
     <Content Include="Images\sample.PNG" />
-    <Content Include="Migrations\Seed_Data\CanadaHolidays.ics" />
-    <Content Include="Content\bootstrap-1.css" />
-    <Content Include="Content\bootstrap-2.css" />
-    <Content Include="Content\bootstrap-3.css" />
-    <Content Include="Content\bootstrap-4.css" />
-    <Content Include="Content\bootstrap-5.css" />
-    <Content Include="Content\bootstrap-6.css" />
+    <Content Include="Migrations\Seed_Data\CanadaHolidays.ics">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\bootstrap-responsive.css" />
-    <Content Include="Content\bootstrap-responsive.min.css" />
     <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\font-awesome.css" />
-    <Content Include="Content\font\fontawesome-webfont.svg" />
-    <Content Include="Content\fullcalendar.css" />
-    <Content Include="Content\fullcalendar.print.css" />
+    <Content Include="Content\fontawesome-webfont.svg" />
     <Content Include="Content\jquery.lightbox-0.5.css" />
     <Content Include="Content\themes\base\images\animated-overlay.gif" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
@@ -279,15 +271,15 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tooltip.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
-    <Content Include="Images\3.png" />
+    <Content Include="Content\3.png" />
     <Content Include="Images\address.png" />
     <Content Include="Images\current.png" />
     <Content Include="Images\delicious.png" />
     <Content Include="Images\email.png" />
     <Content Include="Images\facebook.png" />
     <Content Include="Images\flickr.png" />
-    <Content Include="Images\glyphicons-halflings-white.png" />
-    <Content Include="Images\glyphicons-halflings.png" />
+    <Content Include="Content\glyphicons-halflings-white.png" />
+    <Content Include="Content\glyphicons-halflings.png" />
     <Content Include="Images\google.png" />
     <Content Include="Images\lightbox-blank.gif" />
     <Content Include="Images\lightbox-btn-close.gif" />
@@ -312,7 +304,9 @@
     <Content Include="Images\twitter.png" />
     <Content Include="Images\vimeo.png" />
     <Content Include="Images\youtube.png" />
-    <Content Include="Migrations\Seed_Data\UKHolidays.ics" />
+    <Content Include="Migrations\Seed_Data\UKHolidays.ics">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Scripts\application.js" />
     <Content Include="Scripts\bootbox.js" />
     <Content Include="Scripts\bootstrap-alert.js" />
@@ -344,7 +338,9 @@
     <Content Include="Scripts\prettify.js" />
     <Content Include="Scripts\track.js" />
     <Content Include="Scripts\widgets.js" />
-    <Content Include="Migrations\Seed_Data\USHolidays.ics" />
+    <Content Include="Migrations\Seed_Data\USHolidays.ics">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -375,21 +371,20 @@
     <Folder Include="App_Code\" />
     <Folder Include="App_Data\" />
     <Folder Include="Filters\" />
-    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\font\fontawesome-webfont.eot" />
-    <Content Include="Content\font\fontawesome-webfont.ttf" />
-    <Content Include="Content\font\fontawesome-webfont.woff" />
-    <Content Include="Content\font\FontAwesome.otf" />
+    <Content Include="Content\fontawesome-webfont.eot" />
+    <Content Include="Content\fontawesome-webfont.ttf" />
+    <Content Include="Content\fontawesome-webfont.woff" />
+    <Content Include="Content\FontAwesome.otf" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\font\zocial-regular-webfont.eot" />
-    <Content Include="Content\font\zocial-regular-webfont.ttf" />
-    <Content Include="Content\font\zocial-regular-webfont.woff" />
+    <Content Include="Content\zocial-regular-webfont.eot" />
+    <Content Include="Content\zocial-regular-webfont.ttf" />
+    <Content Include="Content\zocial-regular-webfont.woff" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\_Flash.cshtml" />
@@ -405,6 +400,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Home\EditEvent.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\PublishProfiles\daysunto.com - Web Deploy.pubxml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
