--- a/DaysUntoWeb/Web.config
+++ b/DaysUntoWeb/Web.config
@@ -25,8 +25,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="FacebookAppId" value="281606021969932" />
     <add key="FacebookAppSecret" value="d9316afc5034b12cf04ac89800824369" />
+    <add key="enableSimpleMembership" value="true" />
   </appSettings>
   <system.web>
+    <trust level="Full" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
