Added a wait message for calendar import

--- a/DaysUntoWeb/DaysUntoWeb.csproj
+++ b/DaysUntoWeb/DaysUntoWeb.csproj
@@ -336,6 +336,7 @@
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\prettify.js" />
+    <Content Include="Scripts\spin.js" />
     <Content Include="Scripts\track.js" />
     <Content Include="Scripts\widgets.js" />
     <Content Include="Migrations\Seed_Data\USHolidays.ics">
