Small CSS/Script Change/Refactoring

--- a/DaysUntoWeb/DaysUntoWeb.csproj
+++ b/DaysUntoWeb/DaysUntoWeb.csproj
@@ -324,6 +324,9 @@
     <Content Include="Scripts\bootstrap-transition.js" />
     <Content Include="Scripts\bootstrap-typeahead.js" />
     <Content Include="Scripts\bootstrap.file-input.js" />
+    <Content Include="Scripts\EditEvent\bootstrap-datepicker.js" />
+    <Content Include="Scripts\EditEvent\bootstrap-modal.js" />
+    <Content Include="Scripts\EditEvent\jquery.js" />
     <Content Include="Scripts\gcal.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.17.custom.min.js" />
