--- a/DaysUntoWeb/packages.config
+++ b/DaysUntoWeb/packages.config
@@ -33,6 +33,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="RazorGenerator.MsBuild" version="1.5.3.0" targetFramework="net45" />
+  <package id="RazorGenerator.Mvc" version="1.5.5.0" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.1" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
