--- a/HowManyDaysTil.Web/Web.config
+++ b/HowManyDaysTil.Web/Web.config
@@ -28,6 +28,7 @@
     <add key="enableSimpleMembership" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off"/>
     <trust level="Full" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
